--- a/README
+++ b/README
@@ -14,8 +14,7 @@ I'm going throw them as listed anyway just so I can keep track.
 
 
 Left off at
-    Regexes
-        Substitution
+    Sets, Bags, and Mixes
 
 
 INSTALLING {#{{{
