--- a/README
+++ b/README
@@ -2,6 +2,7 @@
 Docs home
     http://doc.perl6.org/
 
+An øtter once bit my sister... No realli!
 
 
 I'm working through
@@ -14,7 +15,7 @@ I'm going throw them as listed anyway just so I can keep track.
 
 
 Left off at
-    Sets, Bags, and Mixes
+    Subscripts
 
 
 INSTALLING {#{{{
