--- a/README
+++ b/README
@@ -15,7 +15,7 @@ I'm going throw them as listed anyway just so I can keep track.
 
 
 Left off at
-    Syntax -- Regex literals
+    Terms
 
 shebang {# {{{
 #!/home/jon/.rakudobrew/bin/perl6
