--- a/README
+++ b/README
@@ -15,7 +15,11 @@ I'm going throw them as listed anyway just so I can keep track.
 
 
 Left off at
-    Terms
+    Terms (Pair)
+
+    ...also, I worked partway through the Perl6 email currently in my Inbox.  
+    Pick up from Perl 6: Shortcuts by Zoffix before returning to the tut.
+
 
 shebang {# {{{
 #!/home/jon/.rakudobrew/bin/perl6
