--- a/README
+++ b/README
@@ -16,6 +16,12 @@ Left off at
     Terms (Pair)
 
 
+
+
+shebang {# {{{
+#!/home/jon/.rakudobrew/bin/perl6
+}# }}}
+
 Modules to look into {#{{{
     Bailador
         http://perl6maven.com/bailador
@@ -25,13 +31,12 @@ Modules to look into {#{{{
         chance to actually use p6 for practice.
 
         Gabor's perl6maven.com site is using this.
+
+        I installed this (successfully) at work, but I haven't played with it 
+        yet.  In included a bunch of prereqs I wanted anyway, like Mojo 
+        templates, HTTP::Easy, PSGI, URI, etc.
         
 }#}}}
-
-
-shebang {# {{{
-#!/home/jon/.rakudobrew/bin/perl6
-}# }}}
 
 INSTALLING {#{{{
     http://rakudo.org/how-to-get-rakudo/
